1.8.0 (22-02-2021)
- New feature: Added object-profile cache to improve performance

1.7.1 (15-02-2021)
- Bug fix: Fixed bug in contains object
- Bug fix: Fixing SpotBugs issue (SE_BAD_FIELD)

1.7.0 (11-02-2021)
- Improvement: Improved check if profile contains object due to performance issues
- Improvement: Added soft reference to access control profile parsed objects

1.6.3 (22-12-2020)
- Bug fix: Fixed add parent profile to prevent cicle

1.6.2 (18-11-2020)
- Bug fix: Verify custom expression and custom expression validator to checkrules 

1.6.1 (22-10-2020)
- Bug fix: Fixed objects cleaning form profiles

1.6.0 (22-07-2020)
- Refactor: Moved strategies to access-control-management
- Bug fix: General bug fix
- Bug fix: Fixed read outside of an read transaction

1.5.0 (23-06-2020)
- Improvement: Added flag to check if permission and profile are auto generated

1.4.1 (22-05-2020)
- Bug fix: Fix NPE when verifying if a object is in profile without objects association

1.4.0 (21-05-2020)
- New Feature: Profile association with any object

1.3.1 (12-05-2020)
- Bug fix: Fixed permissions delete

1.3.0 (05-03-2020)
- New feature: Support for Java 11

1.2.4 (24-02-2020)
- Bug fix: Fixed permission cache

1.2.3 (09-12-2019)
- Bug fix: Fixed Initialization
- Bug fix: Fixed creation method with expression validator

1.2.2 (06-12-2019)
- Improvement: Added cache to permissions

1.2.1 (04-12-2019)
- Improvement: Added is customExpressionValidator to profiles

1.2.0 (11-10-2019)
- Improvement: Added is locked to profiles and permissions

1.1.0 (07-10-2019)
- Refactor: Changed the name from string to localizedString of profile and permissions
- Refactor: Changed manager to restricted
- Improvement: Verify if code already exists, for profile and permission creation

1.0.0 (25-09-2019)
- Initial version release