@@ -1,3 +1,5 @@
+- Bug fix: Fixed update object cache when profile is deleted
+
 1.8.0 (22-02-2021)
 - New feature: Added object-profile cache to improve performance
 
